# travel_calculator

./: .gitignore  Dockerfile  Pipfile  docker-compose.yml  env.example  manage.py  pyproject.toml  requirements.txt  uwsgi.ini
.github/workflows/: build-deploy.yml
build-deploy/: Dockerfile.app  Dockerfile.nginx  docker-compose.yml  nginx.conf  wsgi_proxy
calculator/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
calculator/models/: __init__.py  flight.py
calculator/services/: __init__.py  amadeus_hotel_commander.py  currency.py  flight.py  food.py  hotel.py
calculator/settings/: base.py  production.py
calculator/tasks/: __init__.py
calculator/templates/: main.html
calculator/views/: __init__.py  calculate.py  main.py
cities/: admin.py  models.py
cities/migrations/: 0001_initial.py  0002_alter_city_city_code_alter_city_eng_name_and_more.py
currencies/: admin.py  apps.py  models.py  services.py
currencies/migrations/: 0001_initial.py  0002_currency_created_at_currency_updated_at.py
flight/: admin.py  apps.py
flight/migrations/: 0001_initial.py
flight/models/: flight.py
flight/services/: flight.py
food/: admin.py  models.py
food/migrations/: 0001_initial.py  0002_foodprice_created_at_foodprice_updated_at.py
food/services/: calculator.py
hotels/: admin.py  apps.py  models.py
hotels/migrations/: 0001_initial.py  0002_hotelprice_created_at_hotelprice_updated_at.py
hotels/services/: amadeus_hotel_commander.py  calculator.py  (+1 more)
scripts/: update_cities.py  update_currencies.py  update_food.py  update_test.py
utils/: __init__.py
