[tool.poetry]
name = "travel_calculator"
version = "0.1.0"
description = ""
authors = ["soyoon247 <skyksy0655@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
APScheduler = "^3.9.1"
PyMySQL = "^1.0.2"
django-apscheduler = "^0.6.2"
amadeus = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
